SDKs/twilio.com/twilio_voice_v1/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateByocTrunkRequest, CreateByocTrunkResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateByocTrunkRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  request: {
    cnamLookupEnabled: false,
    connectionPolicySid: "voluptas",
    friendlyName: "culpa",
    fromDomainSid: "expedita",
    statusCallbackMethod: "DELETE",
    statusCallbackUrl: "dolor",
    voiceFallbackMethod: "GET",
    voiceFallbackUrl: "voluptas",
    voiceMethod: "HEAD",
    voiceUrl: "et",
  },
};

sdk.createByocTrunk(req).then((res: CreateByocTrunkResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createByocTrunk`
* `createConnectionPolicy`
* `createConnectionPolicyTarget`
* `createDialingPermissionsCountryBulkUpdate` - Create a bulk update request to change voice dialing country permissions of one or more countries identified by the corresponding [ISO country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2)
* `createIpRecord`
* `createSourceIpMapping`
* `deleteArchivedCall` - Delete an archived call record from Bulk Export. Note: this does not also delete the record from the Voice API.
* `deleteByocTrunk`
* `deleteConnectionPolicy`
* `deleteConnectionPolicyTarget`
* `deleteIpRecord`
* `deleteSourceIpMapping`
* `fetchByocTrunk`
* `fetchConnectionPolicy`
* `fetchConnectionPolicyTarget`
* `fetchDialingPermissionsCountry` - Retrieve voice dialing country permissions identified by the given ISO country code
* `fetchDialingPermissionsSettings` - Retrieve voice dialing permissions inheritance for the sub-account
* `fetchIpRecord`
* `fetchSourceIpMapping`
* `listByocTrunk`
* `listConnectionPolicy`
* `listConnectionPolicyTarget`
* `listDialingPermissionsCountry` - Retrieve all voice dialing country permissions for this account
* `listDialingPermissionsHrsPrefixes` - Fetch the high-risk special services prefixes from the country resource corresponding to the [ISO country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2)
* `listIpRecord`
* `listSourceIpMapping`
* `updateByocTrunk`
* `updateConnectionPolicy`
* `updateConnectionPolicyTarget`
* `updateDialingPermissionsSettings` - Update voice dialing permissions inheritance for the sub-account
* `updateIpRecord`
* `updateSourceIpMapping`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
